--- a/data-engineer.html
+++ b/data-engineer.html
@@ -151,7 +151,7 @@ data delivery systems and transform it into beautiful insights, analysis, and?..
 online content network for information and online operations of CBS Corporation
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pac-12-networks/job/oiOCafwC'>Pac-12 Networks Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/pac-12-networks/job/oiOCafwC'>Pac-12 Networks Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -250,7 +250,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nextgenamerica/jobs/1791548'>Job Application for Data Engineer  at NextGen America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nextgenamerica/jobs/1791548'>Job Application for Data Engineer  at NextGen America</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -275,7 +275,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/32463D2197?viewed=true'>Monese - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/32463D2197?viewed=true'>Monese - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Engineer at Monese.</p>
 <hr/>
@@ -287,11 +287,11 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999692168574-azure-data-engineer'>Greppy Systems Azure Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999692168574-azure-data-engineer'>Greppy Systems Azure Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://3m.wd1.myworkdayjobs.com/en-US/Search/job/US-Minnesota-Maplewood/Sr-Data-Engineer----Maplewood--MN-_R00967815'>Sr. Data Engineer ? (Maplewood, MN)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://3m.wd1.myworkdayjobs.com/en-US/Search/job/US-Minnesota-Maplewood/Sr-Data-Engineer----Maplewood--MN-_R00967815'>Sr. Data Engineer ? (Maplewood, MN)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 8, 2019 ... A successful candidate will work side-by-side with engineers and scientists in 
 broad disciplines from software, artificial intelligence/machine learning, electronic
@@ -301,7 +301,7 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p><span class="badge badge-light">Campbell California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/infoblox/job/o4Wjafwd'>Infoblox Careers - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/infoblox/job/o4Wjafwd'>Infoblox Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -329,7 +329,7 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 machine learning and be part of transforming the way that we understand and 
 talk to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
+<h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -411,7 +411,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appannie/jobs/1782960'>Job Application for Big Data Engineer Intern at App Annie</a></h5> 
+<h5><a href='https://boards.greenhouse.io/appannie/jobs/1782960'>Job Application for Big Data Engineer Intern at App Annie</a></h5> 
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -460,7 +460,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semanticbits.workable.com/j/33550F2088'>SemanticBits - Jobs: Data Engineer (Scala/Spark) - Remote - Apply online</a></h5> 
+<h5><a href='https://semanticbits.workable.com/j/33550F2088'>SemanticBits - Jobs: Data Engineer (Scala/Spark) - Remote - Apply online</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
